# dbstruct-helpers

./: .gitmodules  CMakeLists.txt  README.md
tests/: CMakeLists.txt  basic.cc
tests/integration/: CMakeLists.txt  example_01.cc  schema-xmls.cc  schema-xmls.h
tests/integration/schema-xmls/: all_real_columns-test.cc  all_real_columns.xml  empty_explicit-test.cc  empty_explicit.xml  empty_file-test.cc  empty_file.xml  one_empty_table-test.cc  one_empty_table.xml  simple_table-test.cc  simple_table.xml  two_simple_tables-test.cc  two_simple_tables.xml  user_system-test.cc  user_system.xml  view_and_table-test.cc  view_and_table.xml
tests/unit/: CMakeLists.txt  dbcolumn-ctors-tests.cc  dbcolumn-set-tests.cc
